# MCF10A_collective_cell_migration

./: README.md  Thornton_Code.ipynb  additional_plotting.ipynb  main.ipynb  main.py  prelim_cpm.ipynb  pyproject.toml  run.prof  simulation_results_bar_light_15.pkl  simulation_results_bar_light_17.pkl  simulation_results_bar_light_17_1.pkl  simulation_results_bar_light_20_speed_01_trial0.pkl  simulation_results_bar_light_20_speed_01_trial1.pkl  simulation_results_bar_light_20_speed_01_trial2.pkl  simulation_results_bar_light_20_speed_08_trial0.pkl  simulation_results_bar_light_20_speed_08_trial1.pkl  simulation_results_bar_light_21_speed_01_trial0.pkl  simulation_results_bar_light_21_speed_01_trial1.pkl  simulation_results_bar_light_21_speed_08_trial0.pkl  simulation_results_bar_light_21_speed_08_trial1.pkl  simulation_results_bar_light_21_speed_08_trial2.pkl  working_cpm.ipynb
modular/: __init__.py  cpm.py  cpm_initializations.py  gillespie_step.py  hams.py  light.py  main.ipynb  monte_carlo_step.py  visuals.py
old_stuff/prelim_models/: prelim_cpm.ipynb
prelim_models/: prelim_rdm.ipynb
src/mcf10amigration/: __init__.py  cpm.py  cpm_initializations.py  gillespie_step.py  hams.py  light.py  monte_carlo_step.py  numba_hams.py  simulation_analysis.py  visuals.py
src/optocpm/: cpm.py  monte_carlo_step.py  visuals.py
trial_data/celldef/: simulation_results_celldef10_all.pkl  simulation_results_celldef5_all.pkl
trial_data/single_wave/: simulation_results_bar_light_10.pkl  simulation_results_bar_light_11.pkl  simulation_results_bar_light_12.pkl  (+8 more)
(+10 files in other folders)
